--- a/example/TPRV3_Analysis.ipynb
+++ b/example/TPRV3_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(7,cont.freqs.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -47,6 +67,20 @@
      "text": [
       "/Users/dburns/opt/anaconda3/envs/mda2/lib/python3.10/site-packages/MDAnalysis/coordinates/PDB.py:431: UserWarning: 1 A^3 CRYST1 record, this is usually a placeholder. Unit cell dimensions will be set to None.\n",
       "  warnings.warn(\"1 A^3 CRYST1 record,\"\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# TRPV3 is a homotetramer so you can average the contact frequencies from all 4 subunits\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# this will give better statistics on the contacts and simplify analysis\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# adding a structure file is a good idea on a multimer so that when you go to visualize it,\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# the correct contact pair is depicted.\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m avg_cont \u001b[39m=\u001b[39m cont\u001b[39m.\u001b[39;49maverage_contacts(structure\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mdata/TRPV3_structure.pdb\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m~/Box/my_scripts/TSenCA/ContactAnalysis/ContactFrequencies.py:233\u001b[0m, in \u001b[0;36mContactFrequencies.average_contacts\u001b[0;34m(self, structure)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[39m# If the contact is happening in the same subunit\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[39mif\u001b[39;00m resids[\u001b[39m'\u001b[39m\u001b[39mchaina\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m  resids[\u001b[39m'\u001b[39m\u001b[39mchainb\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m    230\u001b[0m     \n\u001b[1;32m    231\u001b[0m     \u001b[39m# Find others with matching residue numbers happening in the\u001b[39;00m\n\u001b[1;32m    232\u001b[0m     \u001b[39m# same subunit\u001b[39;00m\n\u001b[0;32m--> 233\u001b[0m     to_average \u001b[39m=\u001b[39m [\n\u001b[1;32m    234\u001b[0m      c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m df \u001b[39mif\u001b[39;00m \n\u001b[1;32m    235\u001b[0m      (\n\u001b[1;32m    236\u001b[0m       ((re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m2\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]) \n\u001b[1;32m    237\u001b[0m       \u001b[39mand\u001b[39;00m \n\u001b[1;32m    238\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m5\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m    239\u001b[0m       \u001b[39mand\u001b[39;00m\n\u001b[1;32m    240\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m3\u001b[39m])\n\u001b[1;32m    241\u001b[0m       )\n\u001b[1;32m    242\u001b[0m     ]\n\u001b[1;32m    243\u001b[0m     contact \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresna\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\\\n\u001b[1;32m    244\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresnb\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m    246\u001b[0m     averaged_data[contact] \u001b[39m=\u001b[39m df[to_average]\u001b[39m.\u001b[39mmean(axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "File \u001b[0;32m~/Box/my_scripts/TSenCA/ContactAnalysis/ContactFrequencies.py:236\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[39m# If the contact is happening in the same subunit\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[39mif\u001b[39;00m resids[\u001b[39m'\u001b[39m\u001b[39mchaina\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m  resids[\u001b[39m'\u001b[39m\u001b[39mchainb\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m    230\u001b[0m     \n\u001b[1;32m    231\u001b[0m     \u001b[39m# Find others with matching residue numbers happening in the\u001b[39;00m\n\u001b[1;32m    232\u001b[0m     \u001b[39m# same subunit\u001b[39;00m\n\u001b[1;32m    233\u001b[0m     to_average \u001b[39m=\u001b[39m [\n\u001b[1;32m    234\u001b[0m      c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m df \u001b[39mif\u001b[39;00m \n\u001b[1;32m    235\u001b[0m      (\n\u001b[0;32m--> 236\u001b[0m       ((re\u001b[39m.\u001b[39;49msplit(\u001b[39m'\u001b[39;49m\u001b[39m:|-\u001b[39;49m\u001b[39m'\u001b[39;49m,c)[\u001b[39m2\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]) \n\u001b[1;32m    237\u001b[0m       \u001b[39mand\u001b[39;00m \n\u001b[1;32m    238\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m5\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m    239\u001b[0m       \u001b[39mand\u001b[39;00m\n\u001b[1;32m    240\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m3\u001b[39m])\n\u001b[1;32m    241\u001b[0m       )\n\u001b[1;32m    242\u001b[0m     ]\n\u001b[1;32m    243\u001b[0m     contact \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresna\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\\\n\u001b[1;32m    244\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresnb\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m    246\u001b[0m     averaged_data[contact] \u001b[39m=\u001b[39m df[to_average]\u001b[39m.\u001b[39mmean(axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/mda2/lib/python3.10/re.py:230\u001b[0m, in \u001b[0;36msplit\u001b[0;34m(pattern, string, maxsplit, flags)\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msplit\u001b[39m(pattern, string, maxsplit\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, flags\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m    223\u001b[0m     \u001b[39m\"\"\"Split the source string by the occurrences of the pattern,\u001b[39;00m\n\u001b[1;32m    224\u001b[0m \u001b[39m    returning a list containing the resulting substrings.  If\u001b[39;00m\n\u001b[1;32m    225\u001b[0m \u001b[39m    capturing parentheses are used in pattern, then the text of all\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[39m    and the remainder of the string is returned as the final element\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[39m    of the list.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 230\u001b[0m     \u001b[39mreturn\u001b[39;00m _compile(pattern, flags)\u001b[39m.\u001b[39;49msplit(string, maxsplit)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -82,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +125,7 @@
        "Text(0, 0.5, 'Projection')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The ContactPCA class makes further analysis of the PCs easy\n",
-    "pca_df = ContactPCA(avg_df)"
+    "pca_data = ContactPCA(avg_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +272,7 @@
        "[11095 rows x 1 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,12 +281,12 @@
     "# Now we have a ContactPCA object that makes it easy to analyze the PCs\n",
     "# If we sort the PCs according to absolute loading score value, we can see which contacts are the most temperature sensitive\n",
     "# Let's see which residue interactions have the strongest tendency to melt\n",
-    "pca_df.sorted_norm_loadings(1)[['PC1']]"
+    "pca_data.sorted_norm_loadings(1)[['PC1']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -346,19 +380,19 @@
        "[11095 rows x 1 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# We can also look at which contacts display the interesting behavior of increasing contact frequency with increasing temperature\n",
-    "pca_df.sorted_norm_loadings(2)[['PC2']]"
+    "pca_data.sorted_norm_loadings(2)[['PC2']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +486,7 @@
        "[11095 rows x 1 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,13 +494,13 @@
    "source": [
     "# Looking at the normalized loading scores doesn't discriminate between which residues are positively or negatively correlated on the PC\n",
     "# you can look at these by using pca_df.sorted_loadings() \n",
-    "pca_df.sorted_loadings(2)[['PC2']]\n",
+    "pca_data.sorted_loadings(2)[['PC2']]\n",
     "# Here, they're still sorted by absolute value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +509,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -495,7 +529,7 @@
    "source": [
     "# We can go back to our original contact frequency data and plot these top contacts to see what their sign means\n",
     "# Let's get the top 5 contacts on PC 2\n",
-    "contacts = pca_df.sorted_loadings(2)[['PC2']].index[:5]\n",
+    "contacts = pca_data.sorted_loadings(2)[['PC2']].index[:5]\n",
     "avg_df[contacts].plot()"
    ]
   },
@@ -508,6 +542,67 @@
     "# you can see that being positively correlated on PC 2 means a decreasing contact frequency through the lower temperature range\n",
     "# Of course it's way more interesting to visualize this data on the protein itself."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test \u001b[39m=\u001b[39m pca_data\u001b[39m.\u001b[39mget_scores(\u001b[39m'\u001b[39m\u001b[39mA:LEU:508-A:THR:411\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rank \u001b[39m=\u001b[39m {k: v \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m \u001b[39msorted\u001b[39m(test\u001b[39m.\u001b[39;49mitems(), key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m item: item[\u001b[39m'\u001b[39m\u001b[39mscore\u001b[39m\u001b[39m'\u001b[39m])}\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'items'"
+     ]
+    }
+   ],
+   "source": [
+    "test = pca_data.get_scores('A:LEU:508-A:THR:411')\n",
+    "rank = {k: v for k, v in sorted(test.items(), key=lambda item: item['score'])} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'score': 0.12821464578082659,\n",
+       "  'PC': 1,\n",
+       "  'rank': 955,\n",
+       "  'percentile': 91.39251915277151},\n",
+       " {'score': 1.0, 'PC': 2, 'rank': 1, 'percentile': 99.99098693105002},\n",
+       " {'score': 0.26832554158283034,\n",
+       "  'PC': 3,\n",
+       "  'rank': 357,\n",
+       "  'percentile': 96.78233438485805},\n",
+       " {'score': 0.04074404181688952,\n",
+       "  'PC': 4,\n",
+       "  'rank': 2139,\n",
+       "  'percentile': 80.7210455159982}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
