--- a/example/TPRV3_Analysis.ipynb
+++ b/example/TPRV3_Analysis.ipynb
@@ -2,19 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "from TSenCA.ContactAnalysis.ContactFrequencies import *\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "import os\n",
+    "from TSenCA.ContactAnalysis.ContactFrequencies import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,27 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(7,cont.freqs.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -67,20 +56,6 @@
      "text": [
       "/Users/dburns/opt/anaconda3/envs/mda2/lib/python3.10/site-packages/MDAnalysis/coordinates/PDB.py:431: UserWarning: 1 A^3 CRYST1 record, this is usually a placeholder. Unit cell dimensions will be set to None.\n",
       "  warnings.warn(\"1 A^3 CRYST1 record,\"\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# TRPV3 is a homotetramer so you can average the contact frequencies from all 4 subunits\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# this will give better statistics on the contacts and simplify analysis\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# adding a structure file is a good idea on a multimer so that when you go to visualize it,\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# the correct contact pair is depicted.\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m avg_cont \u001b[39m=\u001b[39m cont\u001b[39m.\u001b[39;49maverage_contacts(structure\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mdata/TRPV3_structure.pdb\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/Box/my_scripts/TSenCA/ContactAnalysis/ContactFrequencies.py:233\u001b[0m, in \u001b[0;36mContactFrequencies.average_contacts\u001b[0;34m(self, structure)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[39m# If the contact is happening in the same subunit\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[39mif\u001b[39;00m resids[\u001b[39m'\u001b[39m\u001b[39mchaina\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m  resids[\u001b[39m'\u001b[39m\u001b[39mchainb\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m    230\u001b[0m     \n\u001b[1;32m    231\u001b[0m     \u001b[39m# Find others with matching residue numbers happening in the\u001b[39;00m\n\u001b[1;32m    232\u001b[0m     \u001b[39m# same subunit\u001b[39;00m\n\u001b[0;32m--> 233\u001b[0m     to_average \u001b[39m=\u001b[39m [\n\u001b[1;32m    234\u001b[0m      c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m df \u001b[39mif\u001b[39;00m \n\u001b[1;32m    235\u001b[0m      (\n\u001b[1;32m    236\u001b[0m       ((re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m2\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]) \n\u001b[1;32m    237\u001b[0m       \u001b[39mand\u001b[39;00m \n\u001b[1;32m    238\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m5\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m    239\u001b[0m       \u001b[39mand\u001b[39;00m\n\u001b[1;32m    240\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m3\u001b[39m])\n\u001b[1;32m    241\u001b[0m       )\n\u001b[1;32m    242\u001b[0m     ]\n\u001b[1;32m    243\u001b[0m     contact \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresna\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\\\n\u001b[1;32m    244\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresnb\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m    246\u001b[0m     averaged_data[contact] \u001b[39m=\u001b[39m df[to_average]\u001b[39m.\u001b[39mmean(axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "File \u001b[0;32m~/Box/my_scripts/TSenCA/ContactAnalysis/ContactFrequencies.py:236\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[39m# If the contact is happening in the same subunit\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[39mif\u001b[39;00m resids[\u001b[39m'\u001b[39m\u001b[39mchaina\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m  resids[\u001b[39m'\u001b[39m\u001b[39mchainb\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m    230\u001b[0m     \n\u001b[1;32m    231\u001b[0m     \u001b[39m# Find others with matching residue numbers happening in the\u001b[39;00m\n\u001b[1;32m    232\u001b[0m     \u001b[39m# same subunit\u001b[39;00m\n\u001b[1;32m    233\u001b[0m     to_average \u001b[39m=\u001b[39m [\n\u001b[1;32m    234\u001b[0m      c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m df \u001b[39mif\u001b[39;00m \n\u001b[1;32m    235\u001b[0m      (\n\u001b[0;32m--> 236\u001b[0m       ((re\u001b[39m.\u001b[39;49msplit(\u001b[39m'\u001b[39;49m\u001b[39m:|-\u001b[39;49m\u001b[39m'\u001b[39;49m,c)[\u001b[39m2\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]) \n\u001b[1;32m    237\u001b[0m       \u001b[39mand\u001b[39;00m \n\u001b[1;32m    238\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m5\u001b[39m] \u001b[39m==\u001b[39m resids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m    239\u001b[0m       \u001b[39mand\u001b[39;00m\n\u001b[1;32m    240\u001b[0m       (re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m re\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:|-\u001b[39m\u001b[39m'\u001b[39m,c)[\u001b[39m3\u001b[39m])\n\u001b[1;32m    241\u001b[0m       )\n\u001b[1;32m    242\u001b[0m     ]\n\u001b[1;32m    243\u001b[0m     contact \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresna\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresida\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\\\n\u001b[1;32m    244\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresnb\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mresids[\u001b[39m'\u001b[39m\u001b[39mresidb\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m    246\u001b[0m     averaged_data[contact] \u001b[39m=\u001b[39m df[to_average]\u001b[39m.\u001b[39mmean(axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/mda2/lib/python3.10/re.py:230\u001b[0m, in \u001b[0;36msplit\u001b[0;34m(pattern, string, maxsplit, flags)\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msplit\u001b[39m(pattern, string, maxsplit\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, flags\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m    223\u001b[0m     \u001b[39m\"\"\"Split the source string by the occurrences of the pattern,\u001b[39;00m\n\u001b[1;32m    224\u001b[0m \u001b[39m    returning a list containing the resulting substrings.  If\u001b[39;00m\n\u001b[1;32m    225\u001b[0m \u001b[39m    capturing parentheses are used in pattern, then the text of all\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[39m    and the remainder of the string is returned as the final element\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[39m    of the list.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 230\u001b[0m     \u001b[39mreturn\u001b[39;00m _compile(pattern, flags)\u001b[39m.\u001b[39;49msplit(string, maxsplit)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -168,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +247,7 @@
        "[11095 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +355,7 @@
        "[11095 rows x 1 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +461,7 @@
        "[11095 rows x 1 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +484,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -545,56 +520,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'items'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test \u001b[39m=\u001b[39m pca_data\u001b[39m.\u001b[39mget_scores(\u001b[39m'\u001b[39m\u001b[39mA:LEU:508-A:THR:411\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rank \u001b[39m=\u001b[39m {k: v \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m \u001b[39msorted\u001b[39m(test\u001b[39m.\u001b[39;49mitems(), key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m item: item[\u001b[39m'\u001b[39m\u001b[39mscore\u001b[39m\u001b[39m'\u001b[39m])}\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'items'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test = pca_data.get_scores('A:LEU:508-A:THR:411')\n",
-    "rank = {k: v for k, v in sorted(test.items(), key=lambda item: item['score'])} "
+    "from TSenCA.ContactAnalysis.contacts_to_pymol import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cdf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dburns/Box/my_scripts/TSenCA/example/TPRV3_Analysis.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cdf\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cdf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cont_data = ContactFrequencies(avg_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = avg_df.columns[:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bla = get_contact_data(test, cont_data, pca_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'score': 0.12821464578082659,\n",
-       "  'PC': 1,\n",
-       "  'rank': 955,\n",
-       "  'percentile': 91.39251915277151},\n",
-       " {'score': 1.0, 'PC': 2, 'rank': 1, 'percentile': 99.99098693105002},\n",
-       " {'score': 0.26832554158283034,\n",
-       "  'PC': 3,\n",
-       "  'rank': 357,\n",
-       "  'percentile': 96.78233438485805},\n",
-       " {'score': 0.04074404181688952,\n",
-       "  'PC': 4,\n",
-       "  'rank': 2139,\n",
-       "  'percentile': 80.7210455159982}]"
+       "{'slope': -0.0009482178883658368,\n",
+       " 'top_pc': 1,\n",
+       " 'loading_score': 0.14475849896943646,\n",
+       " 'color': 'red',\n",
+       " 'sel_1': 'resname GLY and resnum 718 and chain A',\n",
+       " 'sel_2': 'resname LEU and resnum 730 and chain A'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test"
+    "bla['A:GLY:718-A:LEU:730']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca_data.get_scores('A:GLU:263-A:SER:294')[1]['score']"
    ]
   },
   {
