--- a/example/TPRV3_Analysis.ipynb
+++ b/example/TPRV3_Analysis.ipynb
@@ -67,7 +67,8 @@
     "# this will give better statistics on the contacts and simplify analysis\n",
     "# adding a structure file is a good idea on a multimer so that when you go to visualize it,\n",
     "# the correct contact pair is depicted.\n",
-    "avg_df = cont.average_contacts(structure='data/TRPV3_structure.pdb')"
+    "avg_df = cont.average_contacts(structure='data/TRPV3_structure.pdb')\n",
+    "# pore contacts that occur between opposing subunits will print"
    ]
   },
   {
