non-identical filter and distance between chains

--- a/ContactAnalysis/test.ipynb
+++ b/ContactAnalysis/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "<Universe with 43566 atoms>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure = '../from_pronto/1q95/1q95_minimized_nohoh.pdb'\n",
+    "contact_dir = '/Users/dburns/Library/CloudStorage/Box-Box/1_GROUP_data/Enzymes/atcase/from_nova/contacts/freqs'\n",
+    "contact_files = [f'{contact_dir}/{file}' for file in os.listdir(contact_dir)]\n",
+    "contact_files.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +345,7 @@
        "L  False   True  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,27 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combo[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,11 +366,12 @@
     "    if len(residues[combo[0]]) != len(residues[combo[1]]):\n",
     "         identical_table[combo[1]][combo[0]], identical_table[combo[0]][combo[1]] = False, False\n",
     "    else:\n",
+    "        # catch anything that might have same number of residues but different sequences\n",
     "        bool = np.all(np.equal(residues[combo[0]],residues[combo[1]]))\n",
     "        # Enter True or False in both the upper tri and lower tri  \n",
     "        identical_table[combo[1]][combo[0]], identical_table[combo[0]][combo[1]] =  bool, bool\n",
     "\n",
-    "# Only keep one representative row that describes the identical sets of subunits\n",
+    "# Only keep one representative row for each unique chain that gives the identical sets of subunits\n",
     "identical_table.drop_duplicates(inplace=True)\n",
     "\n",
     "identical_subunits = {}\n",
@@ -386,7 +386,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'blabla', 'haha'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bla = set()\n",
+    "bla.add('haha')\n",
+    "bla.add('blabla')\n",
+    "bla.add('blabla')\n",
+    "bla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +493,7 @@
        "G   True   True  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,13 +504,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(identical_subunits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combos = list(combinations(identical_subunits.keys(),2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dburns/Library/CloudStorage/Box-Box/my_scripts/ChACRA/ContactAnalysis/test.ipynb Cell 12\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Library/CloudStorage/Box-Box/my_scripts/ChACRA/ContactAnalysis/test.ipynb#X31sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     regex \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mregex1\u001b[39m}\u001b[39;00m\u001b[39m|\u001b[39m\u001b[39m{\u001b[39;00mregex2\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Library/CloudStorage/Box-Box/my_scripts/ChACRA/ContactAnalysis/test.ipynb#X31sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m#this will have the identical_subunit key pairs and corresponding column names\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dburns/Library/CloudStorage/Box-Box/my_scripts/ChACRA/ContactAnalysis/test.ipynb#X31sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# you can create the regex using these keys and identical_subunits dictionary\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dburns/Library/CloudStorage/Box-Box/my_scripts/ChACRA/ContactAnalysis/test.ipynb#X31sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m non_identical_subunit_sets[combo] \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(df\u001b[39m.\u001b[39mfilter(regex\u001b[39m=\u001b[39mregex, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mcolumns)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "non_identical_subunit_sets = {}\n",
+    "combos = combinations(identical_subunits.keys(),2)\n",
+    "for combo in combos:\n",
+    "    regex1 = f\"{identical_subunits[combo[0]]}:[A-Z]+:[1-9]+-{identical_subunits[combo[1]]}:[A-Z]+:[1-9]+\"\n",
+    "    regex2 = f\"{identical_subunits[combo[1]]}:[A-Z]+:[1-9]+-{identical_subunits[combo[0]]}:[A-Z]+:[1-9]+\"\n",
+    "    regex = f\"{regex1}|{regex2}\"\n",
+    "#this will have the identical_subunit key pairs and corresponding column names\n",
+    "# you can create the regex using these keys and identical_subunits dictionary\n",
+    "non_identical_subunit_sets[combo] = list(df.filter(regex=regex, axis=1).columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "segids = set(u.residues.segids)\n",
     "# hold the coms for each protomer \n",
-    "seg_sels = {seg: u.select_atoms(f'segid {seg}') for seg in set(u.residues.segids)} # if segid in subunits"
+    "seg_sels = {seg: u.aselect_atoms(f'segid {seg}') for seg in set(u.residues.segids)} # if segid in subunits"
    ]
   },
   {
