--- a/ContactAnalysis/test.ipynb
+++ b/ContactAnalysis/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "<Universe with 43566 atoms>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "G   True   True  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "{0: ['A', 'B', 'C', 'D', 'E', 'F'], 1: ['G', 'H', 'I', 'J', 'K', 'L']}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1996,13 +1996,49 @@
        " 'K': {'E', 'F', 'H', 'K'}}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "partner_chains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {('A', 'C'): 1.7065504023539435,\n",
+       "  ('A', 'B'): 1.7316963647164045,\n",
+       "  ('A', 'E'): 2.276290121014368,\n",
+       "  ('A', 'D'): 14.695149666859432,\n",
+       "  ('A', 'F'): 23.72274977485476},\n",
+       " 1: {('G', 'J'): 1.7411957335158068,\n",
+       "  ('G', 'I'): 27.48132477068823,\n",
+       "  ('G', 'H'): 28.549628162117425,\n",
+       "  ('G', 'K'): 30.40205853744378,\n",
+       "  ('G', 'L'): 44.52822064542099},\n",
+       " (0, 1): {('A', 'G'): 1.6783015165014643,\n",
+       "  ('A', 'H'): 2.3374572559516813,\n",
+       "  ('A', 'K'): 10.352570156109394,\n",
+       "  ('A', 'I'): 11.368680308402194,\n",
+       "  ('A', 'J'): 19.089641017069628,\n",
+       "  ('A', 'L'): 27.828149816818694}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_distances\n",
+    "# nee to make this data for each chain so you can identify which A partners correspond to the rare I and J partners for C for instance"
    ]
   },
   {
